# icebreaker

./: .env.example  .gitignore  CLAUDE.md  STREAMLIT_HOSTING.md  app.py  pyproject.toml  requirements.txt  shajy_thomas_brief.html  shajy_thomas_complete_profile.md  shajy_thomas_profile.md  shajy_thomas_social_profile.md  siddharth_mehta_brief.html  siddharth_mehta_complete_profile.md  siddharth_mehta_detailed.md  siddharth_mehta_profile.md
.streamlit/: secrets.toml.example
icebreaker/: __init__.py  __main__.py  cli.py  company_resolver.py  company_synthesizer.py  config.py  models.py  output.py  pipeline.py  resolver.py  synthesizer.py
icebreaker/collectors/: __init__.py  base.py  direct_profile.py  duckduckgo.py  google_search.py  web_scraper.py
icebreaker/templates/: profile.html
