[project]
name = "icebreaker"
version = "0.1.0"
description = "Build relationship intelligence from public information for meeting preparation"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "anthropic>=0.40",
    "rich>=13.0",
    "click>=8.1",
    "pydantic-settings>=2.0",
    "lxml>=5.0",
    "ddgs>=8.0",
]

[project.optional-dependencies]
web = ["streamlit>=1.30"]
pdf = ["weasyprint>=60"]

[project.scripts]
icebreaker = "icebreaker.cli:main"

[tool.setuptools.package-data]
icebreaker = ["templates/*.html"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
